@@ -30,7 +30,6 @@
 // ------------------------------------------------------------------------- //
 
 include_once XOOPS_ROOT_PATH."/class/xoopsformloader.php";
-
 $name_text = new XoopsFormText(_AM_NAME, "name", 30, 50, $name_value);
 $desc_text = new XoopsFormTextArea(_AM_DESCRIPTION, "desc", $desc_value);
 
@@ -42,9 +41,13 @@ include_once(XOOPS_ROOT_PATH.'/modules/system/constants.php');
 require_once XOOPS_ROOT_PATH."/class/xoopslists.php";
 $admin_dir = XOOPS_ROOT_PATH."/modules/system/admin/";
 $dirlist = XoopsLists::getDirListAsArray($admin_dir);
+/* changes to only allow permission admins you already have */
+global $xoopsUser;
+$gperm =& xoops_gethandler ( 'groupperm' );
+$groups = $xoopsUser->getGroups ();
 foreach($dirlist as $file){
     include XOOPS_ROOT_PATH.'/modules/system/admin/'.$file.'/xoops_version.php';
-    if (!empty($modversion['category'])) {
+    if (!empty($modversion['category']) && count(array_intersect($groups, $gperm->getGroupIds('system_admin', $modversion['category'])))>0) {
         $s_cat_checkbox->addOption($modversion['category'], $modversion['name']);
     }
     unset($modversion);
@@ -56,19 +59,39 @@ $module_handler =& xoops_gethandler('module');
 $criteria = new CriteriaCompo(new Criteria('hasadmin', 1));
 $criteria->add(new Criteria('isactive', 1));
 $criteria->add(new Criteria('dirname', 'system', '<>'));
+/* criteria added to see if the active user can admin the module, do not filter for administrator group  (module_admin)*/
+if (!in_array(XOOPS_GROUP_ADMIN, $groups)){
+	$a_mod = $gperm->getItemIds('module_admin',$groups);
+	$criteria->add(new Criteria('mid', '('.implode(',',$a_mod).')', 'IN'));}
 $a_mod_checkbox->addOptionArray($module_handler->getList($criteria));
 
 $r_mod_checkbox = new XoopsFormCheckBox(_AM_ACCESSRIGHTS, "read_mids[]", $r_mod_value);
 $criteria = new CriteriaCompo(new Criteria('hasmain', 1));
 $criteria->add(new Criteria('isactive', 1));
+/* criteria added to see if the active user can access the module, do not filter for administrator group  (module_read)*/
+if (!in_array(XOOPS_GROUP_ADMIN, $groups)){
+	$r_mod = $gperm->getItemIds('module_read',$groups);
+	$criteria->add(new Criteria('mid', '('.implode(',',$r_mod).')', 'IN'));}
 $r_mod_checkbox->addOptionArray($module_handler->getList($criteria));
 
 $ed_mod_checkbox = new XoopsFormCheckBox(_AM_EDPERM, "useeditor_mids[]", $ed_mod_value);
 $criteria = new CriteriaCompo(new Criteria('isactive', 1));
+/* criteria added to see where the active user can use the wysiwyg editors (use_wysiwygeditor)
+ * administrators don't have explicit entries for this, do not filter
+ */
+if (!in_array(XOOPS_GROUP_ADMIN, $groups)){
+	$ed_mod = $gperm->getItemIds('use_wysiwygeditor',$groups);
+	$criteria->add(new Criteria('mid', '('.implode(',',$ed_mod).')', 'IN'));}
 $ed_mod_checkbox->addOptionArray($module_handler->getList($criteria));
 
 $debug_mod_checkbox = new XoopsFormCheckBox(_AM_DEBUG_PERM, "enabledebug_mids[]", $debug_mod_value);
 $criteria = new CriteriaCompo(new Criteria('isactive', 1));
+/* criteria added to see where the active user can view the debug mode (enable_debug)
+* administrators do not have explicit entries for this, do not filter
+*/
+if (!in_array(XOOPS_GROUP_ADMIN, $groups)){
+	$debug_mod = $gperm->getItemIds('enable_debug',$groups);
+	$criteria->add(new Criteria('mid', '('.implode(',',$debug_mod).')', 'IN'));}
 $debug_mod_checkbox->addOptionArray($module_handler->getList($criteria));
 
 /**
@@ -79,22 +102,30 @@ $group_manager_checkbox = new XoopsFormCheckBox(_AM_GROUPMANAGER_PERM, "groupman
 $criteria = new CriteriaCompo(new Criteria('isactive', 1));
 $groups = $member_handler->getGroups();
 $gperm_handler =& xoops_gethandler('groupperm');
-global $xoopsUser;
+//global $xoopsUser; // already declared above
 foreach($groups as $group){
 	if($gperm_handler->checkRight('group_manager', $group->getVar('groupid'), $xoopsUser->getGroups()))
-		$group_manager_checkbox->addOption($group->getVar('groupid'),$group->getVar('name'));	
+		$group_manager_checkbox->addOption($group->getVar('groupid'),$group->getVar('name'));
 }
 
 $posarr = XoopsBlock::getBlockPositions(true);
 $block_checkbox = array();
 $i = 0;
+$groups = $xoopsUser->getGroups();
 foreach ($posarr as $k=>$v){
-	$tit = (defined($posarr[$k]['title']))?constant($posarr[$k]['title']):$posarr[$k]['title'];
+  $tit = (defined($posarr[$k]['title']))?constant($posarr[$k]['title']):$posarr[$k]['title'];
   $block_checkbox[$i] = new XoopsFormCheckBox('<b>'.$tit.'</b><br />', "read_bids[]", $r_block_value);
   $new_blocks_array = array();
   $blocks_array = XoopsBlock::getAllBlocks("list", $k);
-  foreach ($blocks_array as $key=>$value) {
-  	$new_blocks_array[$key] = "<a href='".XOOPS_URL."/modules/system/admin.php?fct=blocksadmin&amp;op=edit&amp;bid=".$key."'>".$value." ("._MD_AM_ID." : ".icms_conv_nr2local($key).")</a>";
+  /* compare to list of blocks the group can read, do not filter for administrator group */
+  if (!in_array(XOOPS_GROUP_ADMIN, $groups)){
+	  $r_blocks = $gperm->getItemIds('block_read', $groups);
+	  $n_blocks_array = array_intersect_key($blocks_array, array_flip($r_blocks));
+  } else {
+	  $n_blocks_array = $blocks_array;
+  }
+  foreach ($n_blocks_array as $key=>$value) {
+  	$new_blocks_array[$key] = "<a href='".XOOPS_URL."/modules/system/admin.php?fct=blocksadmin&amp;op=edit&amp;bid=".$key."'>".$value." (ID: ".$key.")</a>";
   }
   $block_checkbox[$i]->addOptionArray($new_blocks_array);
   $i++;
@@ -112,14 +143,25 @@ $form = new XoopsThemeForm($form_title, "groupform", "admin.php", "post", true);
 $form->addElement($name_text);
 $form->addElement($desc_text);
 $form->addElement($s_cat_checkbox);
+/**
+ * @todo: use constants instead of hard values
+ */ 
 if (!isset($g_id) || ($g_id != 1 && $g_id != 3)){
 	$form->addElement($group_manager_checkbox);
 }
 $form->addElement($a_mod_checkbox);
 $form->addElement($r_mod_checkbox);
+/**
+ * @todo: use constants instead of hard values
+ */ 
+
 if (!isset($g_id) || ($g_id != 1 && $g_id != 3)){
     $form->addElement($ed_mod_checkbox);
 }
+/**
+ * @todo: use constants instead of hard values
+ */ 
+
 if( !isset($g_id) || $g_id != 1 ){
 	$form->addElement($debug_mod_checkbox);
 }
